@@ -48,6 +48,7 @@
 #include "Aql/Timing.h"
 #include "Assertions/Assert.h"
 #include "Async/async.h"
+#include "Async/SuspensionCounter.h"
 #include "Auth/Common.h"
 #include "Basics/Exceptions.h"
 #include "Basics/ResourceUsage.h"
@@ -313,9 +314,21 @@ bool Query::killed() const {
 /// @brief set the query to killed
 void Query::kill() {
   auto const wasKilled = _queryKilled.exchange(true, std::memory_order_acq_rel);
-  if (ServerState::instance()->isCoordinator() && !wasKilled) {
-    setResult({TRI_ERROR_QUERY_KILLED});
-    cleanupPlanAndEngine(/*sync*/ false);
+  TRI_IF_FAILURE("Query::killDuringSuspendedPrepare") {
+    _queryKilled.notify_one();
+  }
+  if (!wasKilled) {
+    if (ServerState::instance()->isCoordinator()) {
+      setResult({TRI_ERROR_QUERY_KILLED});
+      cleanupPlanAndEngine(/*sync*/ false);
+    } else {
+      _shutdownState.store(ShutdownState::Done, std::memory_order_relaxed);
+      TRI_IF_FAILURE("Query::killDuringSuspendedPrepare") {
+        // this failure point makes the corresponding test work in single
+        // server, though the actual bug could only occur in a cluster setting.
+        _shutdownState.notify_one();
+      }
+    }
   }
 }
 
@@ -496,6 +509,25 @@ async<void> Query::prepareQuery() {
       _queryProfile->registerInQueryList();
     }
     registerQueryInTransactionState();
+
+    // suspend during prepare, but after register in query list: the latter is
+    // necessary so the query can be seen and killed by the test
+    TRI_IF_FAILURE("Query::killDuringSuspendedPrepare") {
+      using namespace std::chrono_literals;
+      auto* const scheduler = SchedulerFeature::SCHEDULER;
+
+      // switch threads, let the original one suspend
+      co_await scheduler->yield();
+      // now wait for the query to be killed, and the cleanup to finally trigger
+      // a wakeup
+      _queryKilled.wait(false);                        // false -> true
+      _shutdownState.wait(ShutdownState::None);        // None -> InProgress
+      _shutdownState.wait(ShutdownState::InProgress);  // InProgress -> Done
+      TRI_ASSERT(_shutdownState == ShutdownState::Done);
+      // Right after the shutdown state is set to Done, the wakeup follows.
+      // Give it a while, then continue.
+      std::this_thread::sleep_for(1ms);
+    }
 
     enterState(QueryExecutionState::ValueType::EXECUTION);
   } catch (Exception const& ex) {
@@ -689,8 +721,90 @@ std::unique_ptr<ExecutionPlan> Query::preparePlan() {
   return plan;
 }
 
+namespace {
+// TODO With a few more changes i.a. to the streaming cursor, we should be able
+//      to move the WAITING/coro glue code into the engine instead.
+//      At some point we should be able to get rid of any connection between
+//      the RestHandler and the SharedQueryState, and move the SuspensionCounter
+//      from the RestHandler into the query.
+auto engineExecuteToCoro = [](SuspensionCounter& suspensionCounter,
+                              auto&& engineExecute) {
+  // Note that the function frame does not (generally) live as long as the
+  // coroutine returned by it, so it's not safe to refer to any local variables
+  // or parameters by reference, unless they are references (to something with
+  // an appropriate lifetime).
+  using ReturnType =
+      std::optional<std::tuple<ExecutorState, SharedAqlItemBlockPtr>>;
+
+  return waitingFunToCoro(suspensionCounter, [&]() -> ReturnType {
+    auto&& [state, skipped, block] = engineExecute();
+    // The default call asks for No skips.
+    TRI_ASSERT(skipped.nothingSkipped());
+    switch (state) {
+      case ExecutionState::WAITING:
+        return std::nullopt;
+      case ExecutionState::HASMORE:
+        return ReturnType{std::in_place, ExecutorState::HASMORE,
+                          std::move(block)};
+      case ExecutionState::DONE:
+        return ReturnType{std::in_place, ExecutorState::DONE, std::move(block)};
+      default:
+        ADB_PROD_CRASH() << "Invalid execution state " << state;
+    }
+  });
+};
+auto engineExecuteSync = [](std::shared_ptr<SharedQueryState> sharedState,
+                            auto&& engineExecute)
+    -> std::tuple<ExecutorState, SharedAqlItemBlockPtr> {
+  while (true) {
+    auto&& [state, skipped, block] = engineExecute();
+    // The default call asks for No skips.
+    TRI_ASSERT(skipped.nothingSkipped());
+    switch (state) {
+      case ExecutionState::WAITING: {
+        sharedState->waitForAsyncWakeup();
+        break;
+      }
+      case ExecutionState::HASMORE:
+        return {ExecutorState::HASMORE, std::move(block)};
+      case ExecutionState::DONE:
+        return {ExecutorState::DONE, std::move(block)};
+      default:
+        ADB_PROD_CRASH() << "Invalid execution state " << state;
+    }
+  }
+};
+
+auto finalizeToCoro = [](SuspensionCounter& suspensionCounter,
+                         auto&& finalize) {
+  return waitingFunToCoro(
+      suspensionCounter, [&]() -> std::optional<std::monostate> {
+        auto state = finalize();
+        switch (state) {
+          case ExecutionState::DONE:
+            return std::monostate{};
+          case ExecutionState::WAITING:
+            return std::nullopt;
+          default:
+            ADB_PROD_CRASH() << "invalid state returned by finalize: " << state;
+        }
+      });
+};
+
+auto finalizeSync = [](std::shared_ptr<SharedQueryState> sharedState,
+                       auto&& finalize) {
+  while (finalize() == ExecutionState::WAITING) {
+    sharedState->waitForAsyncWakeup();
+  }
+};
+
+};  // namespace
+
 /// @brief execute an AQL query
-ExecutionState Query::execute(QueryResult& queryResult) {
+futures::Future<futures::Unit> Query::execute(
+    QueryResult& queryResult, SuspensionCounter* suspensionCounter) {
+  TRI_ASSERT((suspensionCounter == nullptr) ==
+             (_queryApiSynchronicity == QueryApiSynchronicity::Synchronous));
   LOG_TOPIC("e8ed7", DEBUG, Logger::QUERIES)
       << elapsedSince(_startTime) << " Query::execute"
       << " this: " << (uintptr_t)this;
@@ -722,40 +836,26 @@ ExecutionState Query::execute(QueryResult& queryResult) {
               // Note: cached queries were never done with dirty reads,
               // so we can always hand out the result here without extra
               // HTTP header.
-              return ExecutionState::DONE;
+              co_return;
             }
             // if no permissions, fall through to regular querying
           }
         }
 
-        TRI_ASSERT(!_prepareResult.valid());
         // will throw if it fails
-        auto prepare = [this]() -> futures::Future<futures::Unit> {
-          if (!_ast) {  // simon: hack for AQL_EXECUTEJSON
-            co_return co_await prepareQuery();
+        if (!_ast) {  // simon: hack for AQL_EXECUTEJSON
+          auto prepareFut = prepareQuery();
+          if (_queryApiSynchronicity == QueryApiSynchronicity::Synchronous) {
+            // make sure we don't suspend with a synchronous api; the caller
+            // will rely upon suspends happening only due to WAITING.
+#ifdef ARANGODB_ENABLE_MAINTAINER_MODE
+            // the ifdef is necessary, because we have is_ready only in
+            // maintainer mode.
+            TRI_ASSERT(prepareFut.is_ready());
+#endif
           }
-          co_return;
-        }();
-        _executionPhase = ExecutionPhase::PREPARE;
-        if (!prepare.isReady()) {
-          std::move(prepare).thenFinal(
-              [this, sqs = sharedState()](auto&& tryResult) {
-                sqs->executeAndWakeup([this, tryResult = std::move(tryResult)] {
-                  _prepareResult = std::move(tryResult);
-                  TRI_ASSERT(_prepareResult.valid());
-                  return true;
-                });
-              });
-          return ExecutionState::WAITING;
-        } else {
-          _prepareResult = std::move(prepare).result();
-          TRI_ASSERT(_prepareResult.valid());
+          co_await std::move(prepareFut);
         }
-      }
-        [[fallthrough]];
-      case ExecutionPhase::PREPARE: {
-        TRI_ASSERT(_prepareResult.valid());
-        _prepareResult.throwIfFailed();
 
         logAtStart();
         if (_planCacheKey.has_value()) {
@@ -773,8 +873,9 @@ ExecutionState Query::execute(QueryResult& queryResult) {
         trackExecutionStart();
 
 #ifdef ARANGODB_ENABLE_FAILURE_TESTS
-        while (TRI_ShouldFailDebugging("Query::delayingExecutionPhase"))
-          ;
+        while (TRI_ShouldFailDebugging("Query::delayingExecutionPhase")) {
+          std::this_thread::yield();
+        }
 #endif
       }
         [[fallthrough]];
@@ -797,19 +898,30 @@ ExecutionState Query::execute(QueryResult& queryResult) {
         RegisterId const resultRegister = engine->resultRegister();
 
         // We loop as long as we are having ExecState::DONE returned
-        // In case of WAITING we return, this function is repeatable!
+        // WAITING is handled inside the loop, and can't escape from this
+        // function; instead, we suspend the coroutine.
         // In case of HASMORE we loop
         while (true) {
-          auto const& [state, skipped, block] = engine->execute(::defaultStack);
-          // The default call asks for No skips.
-          TRI_ASSERT(skipped.nothingSkipped());
-          if (state == ExecutionState::WAITING) {
-            return state;
+          auto state = ExecutorState{};
+          auto block = SharedAqlItemBlockPtr{};
+          switch (_queryApiSynchronicity) {
+            case QueryApiSynchronicity::Asynchronous: {
+              std::tie(state, block) = co_await engineExecuteToCoro(
+                  *suspensionCounter,
+                  [&engine] { return engine->execute(::defaultStack); });
+              break;
+            }
+            case QueryApiSynchronicity::Synchronous: {
+              std::tie(state, block) = engineExecuteSync(
+                  sharedState(),
+                  [&engine] { return engine->execute(::defaultStack); });
+              break;
+            }
           }
 
           // block == nullptr => state == DONE
           if (block == nullptr) {
-            TRI_ASSERT(state == ExecutionState::DONE);
+            TRI_ASSERT(state == ExecutorState::DONE);
             break;
           }
 
@@ -839,7 +951,7 @@ ExecutionState Query::execute(QueryResult& queryResult) {
             _resultMemoryUsage += diff;
           }
 
-          if (state == ExecutionState::DONE) {
+          if (state == ExecutorState::DONE) {
             trackExecutionEnd();
             break;
           }
@@ -883,17 +995,35 @@ ExecutionState Query::execute(QueryResult& queryResult) {
         if (!queryResult.extra) {
           queryResult.extra = std::make_shared<VPackBuilder>();
         }
-        // will set warnings, stats, profile and cleanup plan and engine
-        auto state = finalize(*queryResult.extra);
+
+        // TODO Refactor finalize into a coroutine (that's aware of
+        //      _queryApiSynchronicity) to get rid of this glue code.
+        switch (_queryApiSynchronicity) {
+          case QueryApiSynchronicity::Asynchronous: {
+            co_await finalizeToCoro(*suspensionCounter, [this, &queryResult] {
+              // will set warnings, stats, profile and cleanup plan and
+              // engine
+              return finalize(*queryResult.extra);
+            });
+            break;
+          }
+          case QueryApiSynchronicity::Synchronous: {
+            finalizeSync(sharedState(), [this, &queryResult] {
+              // will set warnings, stats, profile and cleanup plan and
+              // engine
+              return finalize(*queryResult.extra);
+            });
+            break;
+          }
+        }
+
         bool isCachingAllowed = !_transactionContext->isStreaming() ||
                                 _trx->state()->isReadOnlyTransaction();
-        if (state == ExecutionState::DONE && _cacheEntry != nullptr &&
-            isCachingAllowed) {
+        if (_cacheEntry != nullptr && isCachingAllowed) {
           _cacheEntry->_stats = queryResult.extra;
           QueryCache::instance()->store(&_vocbase, std::move(_cacheEntry));
         }
-
-        return state;
+        co_return;
       }
     }
     // We should not be able to get here
@@ -919,7 +1049,7 @@ ExecutionState Query::execute(QueryResult& queryResult) {
     queryResult.reset(result());
   }
 
-  return ExecutionState::DONE;
+  co_return;
 }
 
 /**
@@ -933,23 +1063,17 @@ ExecutionState Query::execute(QueryResult& queryResult) {
  */
 QueryResult Query::executeSync() {
   _queryApiSynchronicity = QueryApiSynchronicity::Synchronous;
-  std::shared_ptr<SharedQueryState> ss;
+  auto ss = sharedState();
+  TRI_ASSERT(ss != nullptr);
 
   QueryResult queryResult;
-  do {
-    auto state = execute(queryResult);
-    if (state != ExecutionState::WAITING) {
-      TRI_ASSERT(state == ExecutionState::DONE);
-      return queryResult;
-    }
+  auto future = execute(queryResult, nullptr);
+  // Setting _queryApiSynchronizity to Synchronous promises a result that's
+  // already ready.
+  TRI_ASSERT(future.isReady());
+  future.waitAndGet();
 
-    if (!ss) {
-      ss = sharedState();
-    }
-
-    TRI_ASSERT(ss != nullptr);
-    ss->waitForAsyncWakeup();
-  } while (true);
+  return queryResult;
 }
 
 #ifdef USE_V8
@@ -2348,6 +2472,9 @@ ExecutionState Query::cleanupTrxAndEngines() {
           _sharedState->executeAndWakeup([&] {
             _shutdownState.store(ShutdownState::Done,
                                  std::memory_order_relaxed);
+            TRI_IF_FAILURE("Query::killDuringSuspendedPrepare") {
+              _shutdownState.notify_one();
+            }
             return true;
           });
         });
@@ -2628,8 +2755,6 @@ auto aql::toString(Query::ExecutionPhase phase) -> std::string_view {
   switch (phase) {
     case Query::ExecutionPhase::INITIALIZE:
       return "INITIALIZE";
-    case Query::ExecutionPhase::PREPARE:
-      return "PREPARE";
     case Query::ExecutionPhase::EXECUTE:
       return "EXECUTE";
     case Query::ExecutionPhase::FINALIZE:
