@@ -84,16 +84,7 @@ arangodb::aql::QueryResult executeQuery(
       arangodb::aql::QueryOptions(
           arangodb::velocypack::Parser::fromJson(optionsString)->slice()));
 
-  arangodb::aql::QueryResult result;
-  while (true) {
-    auto state = query->execute(result);
-    if (state == arangodb::aql::ExecutionState::WAITING) {
-      query->sharedState()->waitForAsyncWakeup();
-    } else {
-      break;
-    }
-  }
-  return result;
+  return query->executeSync();
 }
 
 TEST_F(IndexNodeTest, objectQuery) {
